# nyabot

./: .gitignore  CHANGELOG.md  README.md  bot.py  claude.md  notoken.md  pyproject.toml  test_bot.py
data/: core_members.json  group_event_system.json  group_events.json  group_members.json  group_quotes.json  group_reply_policy.json  members.json  memory.json  mood.json  nya_memory.json  templates.json
plugins/: ai_chat.py  group_events_listener.py  setu.py  summon.py
services/: ai_gate.py  context_compressor.py  data_store.py  deepseek_client.py  event_system.py  face_learning.py  group_events.py  group_quotes.py  group_reply_policy.py  impression.py  meme_bank.py  memory.py  mention_resolver.py  message_logger.py  mood.py  mood_profile.py  nya_personality.py  offline_responder.py  persona_guard.py  proactive.py  profile_updater.py  relation.py  reply_chain.py  sticker.py  time_profile.py  tts.py  utils.py  world_model.py
