[project]
name = "nyabot"
version = "0.1.0"
description = "nyabot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "edge-tts>=6.1.9",
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
